--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <br> <br>
         <label for="txt">Please Provide Comments:</label>
         <br>
-        <textarea name="" id="" cols="60" rows="8"></textarea> <!-- جزء من الفورم لكنها تكون خارجه كما السيليكت تاق-->
+        <textarea name="comment" id="" cols="60" rows="8"></textarea> <!-- جزء من الفورم لكنها تكون خارجه كما السيليكت تاق-->
         <br> <br>
     </fieldset>
 </section>
